@@ -117,8 +117,11 @@ gettextf(fmt, \dots, domain = NULL)
 }
 
 \value{
-  A character vector of length that of the longest input, in the current
-  locale's encoding.
+  A character vector of length that of the longest input.  If any
+  element of \code{fmt} or any character argument is declared as UTF-8,
+  the element of the result will be in UTF-8 and have the encoding
+  declared as UTF-8.  Otherwise it will be in the current locale's
+  encoding.
 }
 
 \references{
