@@ -9,6 +9,15 @@
 		CHANGES IN R VERSION 2.7.1 patched
 
 
+NEW FEATURES
+
+    o	sprintf() returns elements of the result in UTF-8 when the
+	format or any character input has a corresponding element
+	declared as UTF-8.  Similarly for paste(), elements of the
+	result are in UTF-8 when any input to that element is declared
+	as UTF-8.
+
+
 BUG FIXES
 
     o	Plotmath computed the glyph metrics for the wrong character (and
